fix z-index of top and side navs

--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -2,6 +2,27 @@
 // // They will automatically be included in application.css.
 // // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.payout-preference{
+	border-style: solid;
+	border-width: 1px;
+	border-color: lightgrey;
+	display: flex;
+}
+
+.shield {
+
+}
+
+.escrow-bullets{
+	text-align: left;
+	margin: 20px 5px;
+	font-size: 16px;
+}
+
+.bullet-container {
+	margin: 10% 0;
+}
+
 // #form-page {
 //   margin: none;
 //   padding: none;
